--- a/__JBF_Submission__/__main__.tex
+++ b/__JBF_Submission__/__main__.tex
@@ -104,7 +104,7 @@
 \ead{jesus.villota@cemfi.edu.es}
 
 \cortext[cor1]{Corresponding author: Jesus Villota Miranda <\href{jesus.villota@cemfi.edu.es}{jesus.villota@cemfi.edu.es}>} 
-\fntext[fn1]{I am deeply grateful to Enrique Sentana, Manuel Arellano, Dante Amengual, Rafael Repullo, Javier Suárez, David Martínez-Miera, Julio Crego, and Francisco Peñaranda for their comments. I am especially indebted to Nicolás Forteza and Matías Covarrubias, whose invaluable guidance and insights have greatly enriched this work. I also thank Gustavo Schwenkler for his thoughtful discussion, as well as the participants of the Banking \& Finance Seminar at CEMFI, the Generative AI in Finance Conference at Concordia University and the Miriam Andrés Seminar at the University of La Rioja. Finally, I gratefully acknowledge financial support from Banco de España (BdE).}
+\fntext[fn1]{I am deeply grateful to Enrique Sentana, Manuel Arellano, Dante Amengual, Rafael Repullo, Javier Suárez, David Martínez-Miera, Julio Crego, and Francisco Peñaranda for their comments. I am especially indebted to Nicolás Forteza and Matías Covarrubias, whose invaluable guidance and insights have greatly enriched this work. I also thank Gustavo Schwenkler for his thoughtful discussion, as well as the participants of the Banking \& Finance Seminar at CEMFI, the Generative AI in Finance Conference at Concordia University and the Mirian Andrés Seminar at the University of La Rioja. Finally, I gratefully acknowledge financial support from Banco de España (BdE).}
 
 \affiliation[1]{
 	organization={CEMFI}, 
@@ -152,6 +152,9 @@ Large Language Models, Business News, Stock Market Reaction, Market Efficiency
 
 %%%%%%%%%%%%% ROBUSTNESS CHECKS %%%%%%%%%%%%%%%%%%
 \input{txt_Robustness_Checks.tex}
+
+%%%%%%%%%%%%%% TRADING INTENSITY %%%%%%%%%%%%%%%%%%%%%
+\input{txt_Trading_Intensity.tex}
 
 %%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
 \input{txt_Conclusion.tex}
