--- a/__JBF_Submission__/bib_references_DOI.bib
+++ b/__JBF_Submission__/bib_references_DOI.bib
@@ -15,6 +15,37 @@
   pages = {1139-1168}
 }
 
+@article{jiang2021pervasive,
+  title = {Pervasive underreaction: Evidence from high-frequency data},
+  volume = {141},
+  ISSN = {0304-405X},
+  url = {http://dx.doi.org/10.1016/j.jfineco.2021.04.003},
+  DOI = {10.1016/j.jfineco.2021.04.003},
+  number = {2},
+  journal = {Journal of Financial Economics},
+  publisher = {Elsevier BV},
+  author = {Jiang,  Hao and Li,  Sophia Zhengzi and Wang,  Hao},
+  year = {2021},
+  month = aug,
+  pages = {573-599}
+}
+
+@article{jegadeesh1993returns,
+  title = {Returns to Buying Winners and Selling Losers: Implications for Stock Market Efficiency},
+  volume = {48},
+  ISSN = {1540-6261},
+  url = {http://dx.doi.org/10.1111/j.1540-6261.1993.tb04702.x},
+  DOI = {10.1111/j.1540-6261.1993.tb04702.x},
+  number = {1},
+  journal = {The Journal of Finance},
+  publisher = {Wiley},
+  author = {Jegadeesh, Narasimhan and Titman, Sheridan},
+  year = {1993},
+  month = mar,
+  pages = {65-91}
+}
+
+
 @article{tetlock2008more,
   title = {More Than Words: Quantifying Language to Measure Firms' Fundamentals},
   volume = {63},
@@ -79,7 +110,7 @@
   pages = {712-729}
 }
 
-@inproceedings{wei2018stock, title={Stock Trend Prediction using Financial Market News and BERT}, url={http://dx.doi.org/10.5220/0010172103190326}, DOI={10.5220/0010172103190326}, booktitle={Proceedings of the 12th International Joint Conference on Knowledge Discovery, Knowledge Engineering and Knowledge Management}, publisher={SCITEPRESS - Science and Technology Publications}, author={Wei, Feng and Nguyen, Uyen}, year={2020}, pages={319-“326} }
+@inproceedings{wei2018stock, title={Stock Trend Prediction using Financial Market News and BERT}, url={http://dx.doi.org/10.5220/0010172103190326}, DOI={10.5220/0010172103190326}, booktitle={Proceedings of the 12th International Joint Conference on Knowledge Discovery, Knowledge Engineering and Knowledge Management}, publisher={SCITEPRESS - Science and Technology Publications}, author={Wei, Feng and Nguyen, Uyen}, year={2020}, pages={319-326} }
 
 @techreport{ke2019predicting, title={Predicting Returns With Text Data}, url={http://dx.doi.org/10.3386/w26186}, DOI={10.3386/w26186}, institution={National Bureau of Economic Research}, author={Ke, Zheng Tracy and Kelly, Bryan and Xiu, Dacheng}, year={2019}, month=aug }
 
@@ -88,6 +119,14 @@
 @article{lopez2023can, title={Can ChatGPT Forecast Stock Price Movements? Return Predictability and Large Language Models}, ISSN={1556-5068}, url={http://dx.doi.org/10.2139/ssrn.4412788}, DOI={10.2139/ssrn.4412788}, journal={SSRN Electronic Journal}, publisher={Elsevier BV}, author={Lopez-Lira, Alejandro and Tang, Yuehua}, year={2023} }
 
 @article{antweiler2006us, title={Do US Stock Markets Typically Overreact to Corporate News Stories?}, ISSN={1556-5068}, url={http://dx.doi.org/10.2139/ssrn.878091}, DOI={10.2139/ssrn.878091}, journal={SSRN Electronic Journal}, publisher={Elsevier BV}, author={Antweiler, Werner and Frank, Murray Z.}, year={2006} }
+
+@article{chen2022expected,
+  title={Expected returns and large language models},
+  author={Chen, Yifei and Kelly, Bryan T and Xiu, Dacheng},
+  url={https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4416687},
+  journal={Available at SSRN 4416687},
+  year={2022}
+ }
 
 @article{hansen2018transparency, title={Transparency and Deliberation Within the FOMC: A Computational Linguistics Approach*}, volume={133}, ISSN={1531-4650}, url={http://dx.doi.org/10.1093/qje/qjx045}, DOI={10.1093/qje/qjx045}, number={2}, journal={The Quarterly Journal of Economics}, publisher={Oxford University Press (OUP)}, author={Hansen, Stephen and McMahon, Michael and Prat, Andrea}, year={2018}, month=may, pages={801-“870} }
 
