--- a/__JBF_Submission__/txt_Abstract.tex
+++ b/__JBF_Submission__/txt_Abstract.tex
@@ -1,8 +1,11 @@
-In financial markets, news impact stock prices. Despite the postulated \qquote{Efficient Market Hypothesis}, evidence shows inefficiencies, especially with complex information. 
-Research attempting to explain such inefficiencies has often relied on dictionary-based methods, sentiment analysis, topic modeling, and more recently, vector-based models,
-which still lack a comprehensive understanding of the economic implications of information. 
-Additionally, many studies disregard firm-specific news-implied shocks and overly depend on headlines for analysis. 
-This paper addresses these limitations by leveraging Large Language Models (LLMs) to provide a comprehensive, firm-specific analysis of full news articles. 
-Using a dataset of Spanish business news from DowJones Newswires during a period of high uncertainty we apply LLMs to understand economic shocks affecting firms, categorizing them by type, magnitude, and direction. 
-The findings show that LLM-based analysis provides superior insights during volatile periods compared to a benchmark model (KMeans clustering of vector embeddings). 
-By using LLMs to parse news in a human-like manner, we gain clearer understanding of market reactions to firm-specific information, as evidenced by the profitability of our simple trading strategy.
+Recent research shows that markets do not always efficiently incorporate news, particularly when information is complex or ambiguous. While existing studies employ sentiment analysis, topic modeling, or vector embeddings to analyze financial news, these methods often fail to capture the economic substance of information and its firm-specific implications. We propose a novel approach that leverages Large Language Models (LLMs) to analyze Spanish business news articles during a period of high uncertainty (2020-2021). Our methodology guides LLMs to systematically identify and classify firm-specific economic shocks in news articles according to their type (demand, supply, technological, policy, financial), magnitude (minor, major), and direction (positive, negative). This structured classification allows for a more nuanced understanding of how markets process complex information. Using a simple trading strategy, we demonstrate that our LLM-based classification significantly outperforms a benchmark based on vector embeddings clustering, generating consistent profits out-of-sample while maintaining transparent and durable trading signals. The results suggest that LLMs, when properly guided by economic frameworks, can effectively identify persistent patterns in how markets react to different types of firm-specific news. Our findings contribute to understanding market efficiency and information processing, while offering a promising new tool for analyzing financial narratives.
+
+
+%In financial markets, news impact stock prices. Despite the postulated \qquote{Efficient Market Hypothesis}, evidence shows inefficiencies, especially with complex information. 
+%Research attempting to explain such inefficiencies has often relied on dictionary-based methods, sentiment analysis, topic modeling, and more recently, vector-based models,
+%which still lack a comprehensive understanding of the economic implications of information. 
+%Additionally, many studies disregard firm-specific news-implied shocks and overly depend on headlines for analysis. 
+%This paper addresses these limitations by leveraging Large Language Models (LLMs) to provide a comprehensive, firm-specific analysis of full news articles. 
+%Using a dataset of Spanish business news from DowJones Newswires during a period of high uncertainty we apply LLMs to understand economic shocks affecting firms, categorizing them by type, magnitude, and direction. 
+%The findings show that LLM-based analysis provides superior insights during volatile periods compared to a benchmark model (KMeans clustering of vector embeddings). 
+%By using LLMs to parse news in a human-like manner, we gain clearer understanding of market reactions to firm-specific information, as evidenced by the profitability of our simple trading strategy.
