--- a/__JBF_Submission__/txt_Appendix.tex
+++ b/__JBF_Submission__/txt_Appendix.tex
@@ -11,6 +11,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newpage
+\subsection{Cluster-Average Sharpe Ratios}
+\input{txt_Cluster_Average_Sharpe_Ratios.tex}
+
+\newpage
 % 3) Optimal Cluster Selection
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Optimal Cluster Selection Algorithms}
