--- a/__JBF_Submission__/txt_Conclusion.tex
+++ b/__JBF_Submission__/txt_Conclusion.tex
@@ -1,7 +1,7 @@
 %----------------------------------------------------
 \section{Conclusion}
 %----------------------------------------------------
-\hspace{0.5cm} 
+%\hspace{0.5cm} 
 This paper investigates how information from business news affects stock market prices. We analyze a dataset of Spanish business articles during a particularly volatile period-the COVID-19 pandemic-and examine firm-specific stock market reactions to news. We show that transforming text into vector embeddings and clustering them using KMeans yields clusters that are firm-specific and industry-specific. However, the distribution of articles across clusters is unstable over sequential data splits, indicating temporal instability. When we implement a cluster-based trading strategy-similar to portfolio sorts-on the KMeans clusters, we observe an over-reliance on the past performance of a cluster. That is, signals are short-lived due to temporal instability. Consequently, the out-of-sample profitability of the trading strategy is negligible, evidencing the method's poor temporal generalizability. Therefore, a model based on embeddings is superficial and is not able to anticipate market trends.
 
 %----------------------------------------------------
